--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -1,15 +1,15 @@
 {
     "manifest_version": 2,
     "name": "AM Web WHOIS by ArmCoder",
-    "description": "Very easily you can get information about domains in the AM zone",
-    "version": "5",
+    "description": "Get information about domains in the AM zone",
+    "version": "5.1",
 
     "permissions": [
         "https://www.amnic.net/whois/"
     ],
     "browser_action": {
         "default_icon": "icons/icon.png",
-        "default_popup": "popup.html"
+        "default_popup": "whois.html"
     },
     "icons":{
         "512": "icons/icon_512.png"
